--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -144,6 +144,17 @@
   publisher={Springer}
 }
 
+@article{vanpaemel2012using,
+  title={Using priors to formalize theory: Optimal attention and the generalized context model},
+  author={Vanpaemel, Wolf and Lee, Michael D},
+  journal={Psychonomic Bulletin \& Review},
+  volume={19},
+  number={6},
+  pages={1047--1056},
+  year={2012},
+  publisher={Springer}
+}
+
 @article{ward1994structured,
   title={Structured imagination: The role of category structure in exemplar generation},
   author={Ward, Thomas B},
